# turboquant_plus

./: README.md  pyproject.toml
docs/: getting-started.md  long-context-sparse-v-validation.md  mlx-swift-pr14-gemma4-benchmark-brief.md  quality-benchmarks.md  weight-compression-results.md
docs/papers/: eden-optimal-s-revisit.md  sparse-v-dequant.md  turbo4-resurrection.md  weight-compression-tq4.md
refract/: CHANGELOG.md  QUICKSTART.md  __init__.py  report.py  report_html.py  runner.py
refract/axes/: gtm.py  trajectory.py
refract/backends/: mlx.py
refract/examples/: catastrophic-symturbo.html  clean-q8q8-mistral24b.html  degraded-qwen7b.html  distribution-broken-gemma26b.html
refract/tests/: test_command_construction.py  test_mlx_backend.py
scripts/: README.md  turbo-quick-bench.sh  turbo_hardware_diag.py
tests/: test_codebook.py  test_turbo_hardware_diag.py
turboquant/: codebook.py
